fix jvm